force-app/main/default/objects/Dummy11__c/Dummy11__c.object-meta.xml
<CustomObject>
    <label>Dummy11</label>
    <nameField>
        <label>Dummy11 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy11</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>