force-app/main/default/objects/Dummy11__c/fields/FooBar008__c.field-meta.xml
<CustomField>
    <fullName>FooBar008__c</fullName>
    <label>FooBar008</label>
    <length>255</length>
    <type>Text</type>
</CustomField>