force-app/main/default/objects/Dummy11__c/fields/FooBar046__c.field-meta.xml
<CustomField>
    <fullName>FooBar046__c</fullName>
    <label>FooBar046</label>
    <length>255</length>
    <type>Text</type>
</CustomField>