force-app/main/default/objects/Dummy11__c/fields/FooBar075__c.field-meta.xml
<CustomField>
    <fullName>FooBar075__c</fullName>
    <label>FooBar075</label>
    <length>255</length>
    <type>Text</type>
</CustomField>